Fixing Overflow issue on monthly Funding section

--- a/public/css/laptop.scss
+++ b/public/css/laptop.scss
@@ -110,7 +110,7 @@
 
   .fundingSectionThree {
     .monthly {
-      margin-left: -13%;
+      // margin-left: -13%;
     }
     .col-md-3 {
       flex: 0 0 35%;
@@ -302,7 +302,7 @@
   }
   .fundingSectionThree {
     .monthly {
-      margin-left: -13%;
+      // margin-left: -13%;
     }
     .col-md-3 {
       flex: 0 0 35%;
