--- a/public/css/mobile.scss
+++ b/public/css/mobile.scss
@@ -156,7 +156,7 @@
 
     .monthly .pTableSingleListWrap {
       margin: 0;
-      margin-left: -4rem;
+      // margin-left: -4rem;
     }
 
     .countdown {
